--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-This is a learning project
-Its intention is to practise deploying single page frontend and serverless backend to aws amplify
+ deploying single page frontend and serverless backend to aws amplify
